added bool facet (#1389)
* added bool facet, manual copy of MetaTree https://github.com/thehyve/metatree/pull/92 (to much conflicts on cherry-pick)

* removed boolean from test, since not present in default view.yaml

* use test view configuration instead of default view.yaml

* use original view again, instead of metatree test view

* separate test taxonomy - better performance, and allows for test scenario's independent of default taxonomy values

* rebase with dev